@@ -37,6 +37,9 @@ iconFileTypeBig_PDF=${iconsPath}pdf-big.gif
 
 downloadingIconImage=${iconsPath}downloading.gif
 trayIconImage=${iconsPath}download.gif
+
+
+
 #Icons
 
 #Task panel
@@ -51,10 +54,12 @@ doneTaskString=<html><body><strike>%s</strike></body></html>
 fileMenu.text=&File
 downloadsMenu.text=&Downloads
 connectionsMenu.text=&Options
+
 viewMenu.text=&View
 helpMenu.text=&Help
 
 useConnectionsMenu.text=&Use Connections
+useConnectionsMenu.icon=${iconsPath}connections.gif
 
 downloadInformationAction.Action.text=&Download Information
 downloadInformationAction.Action.accelerator=alt ENTER
@@ -170,6 +175,11 @@ monitorClipboardAction.Action.shortDescription=System clipboard monitoring for n
 monitorClipboardAction.Action.accelerator=F8
 monitorClipboardAction.Action.smallIcon=${iconsPath}clipboard_small.gif
 
+paypalSupportAction.Action.text=&Support this project!
+paypalSupportAction.Action.shortDescription=<html>FreeRapid downloader is distributed as freeware, <br>but if you wish to express your appreciation for the time and resources <br>the author has spent developing, <br>I do accept and appreciate monetary donations.</html>
+paypalSupportAction.Action.smallIcon=${iconsPath}paypal_small.gif
+paypalSupportAction.Action.largeIcon=${iconsPath}paypal.gif
+
 monitorClipboardActionTray=Clipboard monitoring
 
 showSpeedMonitor.Action.text=Show &Speed Monitor...
@@ -204,6 +214,7 @@ showStatusBar.Action.shortDescription = Enable/disable Statusbar
 help.Action.text=&Help
 help.Action.accelerator = F1
 help.Action.shortDescription = Show Help
+help.Action.smallIcon=${iconsPath}help_small.gif
 
 contextDialogHelpAction.Action.text=&Help
 contextDialogHelpAction.Action.accelerator = F1
@@ -221,6 +232,7 @@ visitHomepage.Action.shortDescription=Open browser and go to Homepage
 
 about.Action.text=&About...
 about.Action.shortDescription = About FreeRapid Downloader
+about.Action.smallIcon=${iconsPath}about_small.gif
 
 quit.Action.text=E&xit
 quit.Action.shortDescription = Exit application
@@ -235,6 +247,9 @@ labelClipboardMonitoring.toolTipText=Clipboard Monitoring
 
 #color renderer
 tableColorNone=(none)
+
+mainTableColumns=Name|Progress|Completition|Est. time|Size|Speed|Average Speed|Service|Connection
+estimating=Estimating...
 
 #Memory indicator
 btnGC.icon=${iconsPath}trash.gif
